[tool.poetry]
name = "streamer-screamer"
version = "0.1.0"
description = ""
authors = ["Paritosh Dhiman <Paritosh.Dhiman@libertyenergy.com>"]
readme = "README.md"
packages = [{include = "streamer_screamer"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
